syntax = "proto3";

option go_package="./;pb";

package pb;

service SessionManager {
  rpc SessionEstablishment(SessionEstablishRequest) returns (SessionEstablishResponse) {}
  rpc SessionDeletion(SessionDeletionRequest) returns (SessionDeletionResponse) {}
}

message SessionEstablishRequest {
  string SessionID = 1;
  uint32 UserID = 2;
}

message SessionEstablishResponse {
  string Status = 1;
}

message SessionDeletionRequest {
  string SessionID = 1;
  uint32 UserID = 2;
}

message SessionDeletionResponse {
  uint64 Status =1;
}